--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>MATHビューア v2.6 (ハイブリッド対応)</title>
+<title>MATH-view_v1</title>
 <style>
     /* CSSはv2.3から変更ありません */
     body { font-family: sans-serif; line-height: 1.7; padding: 20px; background-color: #f0f2f5; }
     .container { max-width: 800px; margin: 0 auto; background-color: #fff; padding: 30px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
     h1, h2, h3 { border-bottom: 1px solid #ddd; padding-bottom: 8px; }
-    h1 { border-width: 2px; border-color: #4a90e2;}
+    h1 { border-width: 2px; border-color: #4a90e2; position: relative;}
     .file-loader { margin-bottom: 25px; padding: 20px; border-radius: 5px; background-color: #f9f9f9; }
     .search-area { margin-bottom: 25px; padding: 20px; border-radius: 5px; background-color: #f9f9f9; }
     #problem-display { border: 1px solid #ddd; padding: 20px; border-radius: 5px; }
@@ -21,7 +20,61 @@
     .options_block ul { list-style-type: none; padding-left: 0; }
     .options_block li { margin-bottom: 0.5em; }
     .image-container { display: flex; flex-wrap: wrap; gap: 15px; }
-    .image-container img { max-width: 100%; height: auto; border: 1px solid #ddd; border-radius: 4px; }
+    /* individual image scaling */
+    .resizable-image-wrapper {
+        position: relative;
+        display: inline-block; /* Aligns controls correctly */
+        page-break-inside: avoid;
+    }
+    .resizable-image-wrapper img {
+        max-width: 100%;
+        height: auto;
+        /* border: 1px solid #ddd; */
+        border-radius: 4px;
+        display: block; /* Removes bottom space */
+        transition: width 0.2s ease-in-out; /* Changed from transform */
+    }
+    .resizable-image-wrapper figcaption {
+        font-size: 0.9em;
+        color: #555;
+        text-align: left;
+        padding-top: 5px;
+    }
+    .image-controls {
+        position: absolute;
+        bottom: 5px;
+        right: 5px;
+        background-color: rgba(0, 0, 0, 0.6);
+        color: white;
+        padding: 3px 5px;
+        border-radius: 4px;
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.2s, visibility 0.2s;
+        font-size: 12px;
+    }
+    figure:hover .image-controls {
+        opacity: 1;
+        visibility: visible;
+    }
+    .image-controls button {
+        background-color: #fff;
+        color: #333;
+        border: none;
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        cursor: pointer;
+        font-weight: bold;
+        line-height: 18px;
+        padding: 0;
+        text-align: center;
+    }
+    .width-value { font-variant-numeric: tabular-nums; }
+
     .text_block.statement   { background-color: #fffbe6; border-left: 5px solid #ffc107; padding: 15px; border-radius: 4px; }
     .text_block.explanation { background-color: #e3f2fd; border-left: 5px solid #2196f3; padding: 15px; border-radius: 4px; }
     .text_block.notice      { background-color: #ffebee; border-left: 5px solid #f44336; padding: 15px; border-radius: 4px; }
@@ -29,12 +82,50 @@
     .text_block.muted       { background-color: #f5f5f5; border-left: 5px solid #9e9e9e; padding: 15px; border-radius: 4px; }
     .text_block.normal      { padding: 0; }
     .id-button { margin: 3px; padding: 5px 10px; cursor: pointer; }
+
+    /* Settings Button */
+    #settings-btn { position: absolute; top: 50%; right: 0; transform: translateY(-50%); background: none; border: none; font-size: 1.8em; line-height: 1; cursor: pointer; color: #ccc; transition: color 0.2s; padding: 5px; }
+    #settings-btn:hover { color: #888; }
+
+    /* Modal Styles */
+    .modal-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.6); display: flex; justify-content: center; align-items: center; z-index: 1000; }
+    .modal-content { background-color: #fff; padding: 20px 30px; border-radius: 8px; box-shadow: 0 5px 15px rgba(0,0,0,0.3); width: 90%; max-width: 400px; position: relative; }
+    .modal-close { position: absolute; top: 10px; right: 15px; font-size: 1.8em; font-weight: bold; color: #aaa; cursor: pointer; line-height: 1; }
+    .modal-close:hover { color: #333; }
+    .modal-body .form-group { margin-bottom: 15px; }
+    .modal-body label { display: block; margin-bottom: 5px; font-weight: bold; }
+    .modal-body input { width: 100%; padding: 8px; box-sizing: border-box; border: 1px solid #ccc; border-radius: 4px; }
+    .modal-body button { width: 100%; padding: 10px; background-color: #4a90e2; color: white; border: none; border-radius: 4px; cursor: pointer; font-size: 1em; }
+    .modal-body button:hover { background-color: #357abd; }
+
+    /* Print Styles */
+    @media print {
+        body * { visibility: hidden; }
+        #problem-display, #problem-display * { visibility: visible; }
+        #problem-display {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            margin: 0;
+            padding: 1cm;
+            box-sizing: border-box;
+            border: none;
+            box-shadow: none;
+        }
+        .image-controls { display: none !important; /* Hide controls when printing */ }
+        .resizable-image-wrapper, .block { page-break-inside: avoid; }
+    }
 </style>
+<style id="print-style-override"></style>
 <link rel="stylesheet" href="/index.css">
 </head>
 <body>
     <div class="container">
-        <h1>MATHビューア v2.6</h1>
+        <h1>
+            MATH-view v1.1
+            <button id="settings-btn" title="設定と印刷">&#9881;</button>
+        </h1>
         <div class="file-loader">
             <h2>問題の読み込み</h2>
             <div id="manifest-loader">
@@ -52,12 +143,39 @@
         </div>
         <div id="problem-display"><p>問題セットを選択するか、ローカルのJSONファイルを読み込んでください。</p></div>
     </div>
+
+    <div id="settings-modal" class="modal-overlay" style="display: none;">
+        <div class="modal-content">
+            <span class="modal-close" id="modal-close-btn">&times;</span>
+            <h2>設定と印刷</h2>
+            <div class="modal-body">
+                 <div class="form-group">
+                    <label for="print-font-size">印刷時の基本文字サイズ (px)</label>
+                    <input type="number" id="print-font-size" min="8" max="20" step="1" value="11">
+                </div>
+                <div class="form-group">
+                    <label for="print-image-size">印刷時の画像最大幅 (%)</label>
+                    <input type="number" id="print-image-size" min="10" max="100" step="5" value="60">
+                </div>
+                <hr>
+                <div class="form-group">
+                    <label for="print-password">暗証キー</label>
+                    <input type="password" id="print-password" placeholder="印刷するにはキーを入力 (例: 1234)">
+                </div>
+                <button id="print-exec-btn">印刷する</button>
+                <p id="print-status" style="color: red; font-size: 0.9em; height: 1.2em;"></p>
+            </div>
+        </div>
+    </div>
+
 <script>
 let problemsInFile = []; // ファイル内の問題を保持する配列
 
 document.addEventListener('DOMContentLoaded', () => {
     loadManifest();
     document.getElementById('file-input').addEventListener('change', handleFileSelect, false);
+    document.getElementById('problem-display').addEventListener('click', handleImageControls);
+    setupModal();
 });
 
 async function loadManifest() {
@@ -72,7 +190,6 @@ async function loadManifest() {
             ).join('');
         }
     } catch (error) {
-        // manifest.json がない場合は静かに失敗し、ローカルファイルでの利用を妨げない
         document.getElementById('manifest-loader').style.display = 'none';
         console.warn("manifest.json not found, hiding manifest loader. This is normal for local usage.");
     }
@@ -151,21 +268,130 @@ function displayProblem(index) {
 function renderBlock(block) {
     let contentHtml = '';
     const blockClass = block.class ? ` ${escapeHtml(block.class)}` : '';
+    const style = block.fontSize ? `style="font-size: ${escapeHtml(block.fontSize)};"` : '';
+
     switch (block.type) {
-        case 'title_block': contentHtml = escapeHtml(block.content); break;
-        case 'text_block': contentHtml = `<div class="${escapeHtml(block.class) || 'normal'}">${escapeHtml(block.content)}</div>`; break;
-        case 'image_gallery': contentHtml = `<div class="image-container">${(block.paths || []).map(path => `<img src="${escapeHtml(path)}" alt="図">`).join('')}</div>`; break;
+        case 'title_block': 
+            contentHtml = `<div ${style}>${escapeHtml(block.content)}</div>`; 
+            break;
+        case 'text_block': 
+            contentHtml = `<div class="${escapeHtml(block.class) || 'normal'}" ${style}>${escapeHtml(block.content)}</div>`; 
+            break;
+        case 'image_gallery':
+            const images = block.images || (block.paths || []).map(path => ({ path }));
+            contentHtml = `<div class="image-container">${images.map(image => {
+                const width = image.width || 100;
+                const caption = image.caption ? `<figcaption>${escapeHtml(image.caption)}</figcaption>` : '';
+                return `
+                <figure class="resizable-image-wrapper">
+                    <img src="${escapeHtml(image.path)}" alt="${escapeHtml(image.caption || '図')}" style="width: ${width}%;" data-width="${width}">
+                    <div class="image-controls">
+                        <button class="scale-down" title="縮小">-</button>
+                        <span class="width-value">${width}%</span>
+                        <button class="scale-up" title="拡大">+</button>
+                    </div>
+                    ${caption}
+                </figure>`;
+            }).join('')}</div>`;
+            break;
         case 'options_block':
             const title = block.title ? `<strong>${escapeHtml(block.title)}</strong>` : '';
             const options = (block.options || []).map(opt => `<li><strong>${escapeHtml(opt.label) || ''}.</strong> ${escapeHtml(opt.value || '')}</li>`).join('');
-            contentHtml = `${title}<ul>${options}</ul>`;
+            contentHtml = `<div ${style}>${title}<ul>${options}</ul></div>`;
             break;
     }
     return `<div class="block ${escapeHtml(block.type)}${blockClass}">${contentHtml}</div>`;
 }
 
+function handleImageControls(event) {
+    const target = event.target;
+    const isScaleUp = target.classList.contains('scale-up');
+    const isScaleDown = target.classList.contains('scale-down');
+
+    if (isScaleUp || isScaleDown) {
+        const wrapper = target.closest('.resizable-image-wrapper');
+        const img = wrapper.querySelector('img');
+        const widthValueDisplay = wrapper.querySelector('.width-value');
+
+        let currentWidth = parseInt(img.dataset.width, 10) || 100;
+        
+        if (isScaleUp) {
+            currentWidth += 10;
+        } else {
+            currentWidth -= 10;
+        }
+
+        currentWidth = Math.max(10, Math.min(100, currentWidth)); // Clamp width between 10% and 100%
+
+        img.dataset.width = currentWidth;
+        img.style.width = `${currentWidth}%`;
+        widthValueDisplay.textContent = `${currentWidth}%`;
+    }
+}
+
 function escapeHtml(str) {
     return String(str || '').replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#039;'})[m]);
+}
+
+function setupModal() {
+    const settingsBtn = document.getElementById('settings-btn');
+    const modal = document.getElementById('settings-modal');
+    const closeModalBtn = document.getElementById('modal-close-btn');
+    const printExecBtn = document.getElementById('print-exec-btn');
+    const passwordInput = document.getElementById('print-password');
+    const printStatus = document.getElementById('print-status');
+    const imageSizeInput = document.getElementById('print-image-size');
+    const fontSizeInput = document.getElementById('print-font-size');
+    const printStyleOverride = document.getElementById('print-style-override');
+
+    function showModal() {
+        modal.style.display = 'flex';
+        passwordInput.focus();
+    }
+
+    function hideModal() {
+        modal.style.display = 'none';
+        passwordInput.value = '';
+        printStatus.textContent = '';
+    }
+
+    settingsBtn.addEventListener('click', showModal);
+    closeModalBtn.addEventListener('click', hideModal);
+    modal.addEventListener('click', (event) => {
+        if (event.target === modal) {
+            hideModal();
+        }
+    });
+
+    printExecBtn.addEventListener('click', () => {
+        if (passwordInput.value === '1234') {
+            printStatus.textContent = '';
+            
+            // Apply dynamic print styles
+            const imageSize = Math.max(10, Math.min(100, parseInt(imageSizeInput.value, 10) || 60));
+            const fontSize = Math.max(8, Math.min(20, parseInt(fontSizeInput.value, 10) || 11));
+
+            printStyleOverride.innerHTML = `
+                @media print {
+                    #problem-display {
+                        font-size: ${fontSize}px !important;
+                    }
+                    .resizable-image-wrapper img {
+                        max-width: ${imageSize}% !important;
+                    }
+                }
+            `;
+
+            hideModal();
+            setTimeout(() => {
+                window.print();
+            }, 100);
+        } else {
+            printStatus.textContent = '暗証キーが違います。';
+            passwordInput.value = '';
+            passwordInput.focus();
+        }
+    });
 }
 </script>
 <script type="module" src="/index.tsx"></script>
