--- a/index.html
+++ b/index.html
@@ -98,6 +98,28 @@
     .modal-body button { width: 100%; padding: 10px; background-color: #4a90e2; color: white; border: none; border-radius: 4px; cursor: pointer; font-size: 1em; }
     .modal-body button:hover { background-color: #357abd; }
 
+    /* Styles for larger buttons in file loader */
+    .file-loader .id-button {
+        font-size: 1.1em;
+        padding: 8px 16px;
+    }
+    #file-input {
+        margin-top: 10px;
+    }
+    #file-input::file-selector-button {
+        font-size: 1.1em;
+        padding: 8px 16px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        cursor: pointer;
+        background-color: #f0f0f0;
+        transition: background-color 0.2s;
+        margin-right: 10px;
+    }
+    #file-input::file-selector-button:hover {
+        background-color: #e0e0e0;
+    }
+
     /* Print Styles */
     @media print {
         body * { visibility: hidden; }
@@ -115,6 +137,24 @@
         }
         .image-controls { display: none !important; /* Hide controls when printing */ }
         .resizable-image-wrapper, .block { page-break-inside: avoid; }
+    }
+    
+    /* Responsive styles for mobile */
+    @media (max-width: 600px) {
+        #problem-set-buttons {
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+        }
+        .file-loader .id-button {
+            width: 100%;
+            box-sizing: border-box;
+            text-align: center;
+            margin: 3px 0;
+        }
+        #file-input {
+            width: 100%;
+        }
     }
 </style>
 <style id="print-style-override"></style>
@@ -155,7 +195,7 @@
                 </div>
                 <div class="form-group">
                     <label for="print-image-size">印刷時の画像最大幅 (%)</label>
-                    <input type="number" id="print-image-size" min="10" max="100" step="5" value="60">
+                    <input type="number" id="print-image-size" min="10" max="150" step="5" value="60">
                 </div>
                 <hr>
                 <div class="form-group">
@@ -321,7 +361,7 @@ function handleImageControls(event) {
             currentWidth -= 10;
         }
 
-        currentWidth = Math.max(10, Math.min(100, currentWidth)); // Clamp width between 10% and 100%
+        currentWidth = Math.max(10, Math.min(150, currentWidth)); // Clamp width between 10% and 150%
 
         img.dataset.width = currentWidth;
         img.style.width = `${currentWidth}%`;
@@ -368,7 +408,7 @@ function setupModal() {
             printStatus.textContent = '';
             
             // Apply dynamic print styles
-            const imageSize = Math.max(10, Math.min(100, parseInt(imageSizeInput.value, 10) || 60));
+            const imageSize = Math.max(10, Math.min(150, parseInt(imageSizeInput.value, 10) || 60));
             const fontSize = Math.max(8, Math.min(20, parseInt(fontSizeInput.value, 10) || 11));
 
             printStyleOverride.innerHTML = `
